# ProBot

./: .replit  config.json  homeworks.json  homeworks_wrapper.py  id_wrapper.py  index.py  pronoteAPI_connection.py  pronoteAPI_qrcode.py  pronoteAPI_utils.py  pyproject.toml  replit.nix  users.json
old.git/: COMMIT_EDITMSG  config  index
old.git/logs/: HEAD
old.git/logs/refs/heads/: main
old.git/logs/refs/remotes/origin/: HEAD  main
old.git/refs/heads/: main
old.git/refs/remotes/origin/: main
